--- a/style.css
+++ b/style.css
@@ -5,3 +5,30 @@ body {
 .suman-k {
     color: orange;
 }
+
+h1 {
+    font-size: 40px;
+}
+
+section {
+    display: flex;
+}
+
+.half-width {
+    width: 50%;
+    padding: 10px;
+    text-align: justify;
+}
+
+.half-width img {
+    width: 80%;
+}
+
+.link-button {
+    background-image: linear-gradient(orange, tomato);
+    padding: 10px 40px;
+    color: white;
+    border-radius: 10px;
+    text-decoration: none;
+
+}
