--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 
 .suman-k {
@@ -12,11 +13,12 @@ h1 {
 
 section {
     display: flex;
+    margin-top: 100;
 }
 
 .half-width {
     width: 50%;
-    padding: 10px;
+    padding: 5%;
     text-align: justify;
 }
 
@@ -30,5 +32,6 @@ section {
     color: white;
     border-radius: 10px;
     text-decoration: none;
+    font-weight: 700;
 
 }
