--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1 {
     font-size: 40px;
 }
 
-section {
+.flexiable-container {
     display: flex;
     margin-top: 100;
 }
@@ -39,5 +39,10 @@ section {
 .about-banner {
     background-image: url(7.png);
     background-repeat: no-repeat;
-    width: 80%;
+}
+
+.my-recipe {
+    padding-left: 25%;
+    padding-right: 25%;
+    text-align: center;
 }
