--- a/style.css
+++ b/style.css
@@ -46,3 +46,14 @@ h1 {
     padding-right: 25%;
     text-align: center;
 }
+
+.pic {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    box-shadow: 10px 10px 40px gray;
+}
+
+.paa {
+    width: 10%;
+}
